<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_h"
            android:background="@color/colorPrimary"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/title_book"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_thumbs_up"
                    app:layout_constraintStart_toEndOf="@+id/iv_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_thumbs_up"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/reactive_thumbs_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_next"
        app:layout_constraintTop_toBottomOf="@+id/appbar_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="120dp"
                android:layout_height="174dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/placeholder0" />

            <ImageView
                android:id="@+id/iv_thumbs_up_center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_favorite"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail"
                app:layout_constraintEnd_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintStart_toStartOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toTopOf="@+id/iv_thumbnail"
                app:tint="@color/colorWhite"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail"
                tools:text="바나나 그 다음, test test test test test test test test test" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title"
                tools:text="2017.12.05" />

            <TextView
                android:id="@+id/tv_price_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/book_item_price"
                android:textColor="@color/colorText"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorTextAccent"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/tv_price_key"
                app:layout_constraintTop_toTopOf="@+id/tv_price_key"
                tools:text="13,500원" />

            <TextView
                android:id="@+id/tv_publisher_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/book_item_publisher"
                android:textColor="@color/colorText"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/tv_publisher_key"
                app:layout_constraintTop_toTopOf="@+id/tv_publisher_key"
                tools:text="북하우스" />

            <TextView
                android:id="@+id/tv_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_publisher"
                tools:text="KOTRA 상파울루 무역관장 현장 보고 『브라질은 바나나를 닮았다』. 우리가 갖지 못한 것을 갖고 있는 브라질의 체계를 살펴보고 교훈을 얻기 위해 펴낸 책으로, 한국과 닮은 듯 다른 브라질의 다양성과 자원에 대한 심층 분석을 담고 있다. 1장은 저자가 생각하는 체계의 개념과 종류를 담았고 2장에서는 브라질 체계의 형성과 비용을 살펴보았다. 3장에서는 브라질과 한국, 중국, 호주, 이스라엘의 체계와 비교하면서 브라질 체계의 특징을 부각시켰고 4장에서는" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/next_web"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        app:layout_constraintTop_toTopOf="@+id/tv_next" />
</androidx.constraintlayout.widget.ConstraintLayout>